force-app/main/default/objects/FieldConditions__c/fields/DeleteCondition__c.field-meta.xml
<CustomField>
    <fullName>DeleteCondition__c</fullName>
    <label>DeleteCondition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>