force-app/main/default/objects/FieldConditions__c/fields/HiddenCondition__c.field-meta.xml
<CustomField>
    <fullName>HiddenCondition__c</fullName>
    <label>Hidden Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>