force-app/main/default/objects/FieldConditions__c/fields/ReadOnlyCondition__c.field-meta.xml
<CustomField>
    <fullName>ReadOnlyCondition__c</fullName>
    <label>Read-only Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>